I got it working and its so dope. Log in works (without extension) fixes #27, also added a settings page for configuration, got data points fixes #16, looked into streaming response fixes #19

--- a/streamlit/styles/main.css
+++ b/streamlit/styles/main.css
@@ -29,11 +29,10 @@ footer {
   display: none;
 }
 
-.st-af,
-.st-ae {
-  /* stupid stars */
-  justify-content: center;
-}
+/* .st-af, */
+/* .st-ae { */
+/*   justify-content: center; */
+/* } */
 
 /* fonts */
 textarea,
