added a tips page fixes #77 informed the tutor about the 1 week time window fixes #81, reduced costs by using gpt-4o-mini for the initial message fixes #77, fixes #73

--- a/streamlit/styles/main.css
+++ b/streamlit/styles/main.css
@@ -51,6 +51,10 @@ stElementContainer {
 }
 
 /* fonts */
+[data-testid="stChatMessageAvatarAssistant"] {
+  display: flex;
+  align-items: center;
+}
 
 stChatInput,
 code,
