figured out that skeleton ui is overriding markdown presets

--- a/svelte/src/app.postcss
+++ b/svelte/src/app.postcss
@@ -9,3 +9,13 @@
 	src: url('/fonts/Quicksand.ttf');
 	font-display: swap;
 }
+
+[data-theme="gold-nouveau"] h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+[data-theme="gold-nouveau"] h2 {
+  font-size: 1.5em;
+  margin: 0.75em 0;
+}
