scroll is working better, code block is better. Parsing emoji's is weird. Getting weird escape characters in code blocks. everything seems to want to be wrapped in triple quotes

--- a/svelte/src/app.postcss
+++ b/svelte/src/app.postcss
@@ -128,7 +128,7 @@ blockquote {
     background-color: rgb(var(--color-primary-500) / 0.2);
 }
 code {
-    white-space: nowrap;
+    /* white-space: nowrap; */
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     font-size: 0.75rem /* 12px */;
     line-height: 1rem /* 16px */;
