--- a/svelte/src/app.postcss
+++ b/svelte/src/app.postcss
@@ -121,27 +121,6 @@ blockquote {
     font-style: italic;
     color: rgba(var(--theme-font-color-base));
 }
-
-:is(.dark code) {
-    --tw-text-opacity: 1;
-    color: rgb(var(--color-primary-400) / var(--tw-text-opacity));
-    background-color: rgb(var(--color-primary-500) / 0.2);
-}
-code {
-    /* white-space: nowrap; */
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    font-size: 0.75rem /* 12px */;
-    line-height: 1rem /* 16px */;
-    --tw-text-opacity: 1;
-    color: rgb(var(--color-primary-700) / var(--tw-text-opacity));
-    background-color: rgb(var(--color-primary-500) / 0.3);
-    border-radius: 0.25rem /* 4px */;
-    padding-top: 0.125rem /* 2px */;
-    padding-bottom: 0.125rem /* 2px */;
-    padding-left: 0.25rem /* 4px */;
-    padding-right: 0.25rem /* 4px */;
-}
-
 pre {
     overflow-x: auto;
     white-space: pre-wrap;
@@ -212,3 +191,13 @@ ins {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     color: rgb(var(--on-success));
 }
+
+[data-theme='skeleton'] {
+    background-image: radial-gradient(at 0% 0%, rgba(79, 70, 229, 0.33) 0px, transparent 50%),
+                      radial-gradient(at 98% 1%, rgba(245, 206, 147, 0.33) 0px, transparent 50%);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
