--- a/svelte/src/app.postcss
+++ b/svelte/src/app.postcss
@@ -10,6 +10,14 @@
 	font-display: swap;
 }
 
+.gold-nouveau-ai-message-gradient {
+ background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+}
+
+.p-0.5 {
+  padding: 0.05rem /* 4px */;
+}
+
 h1 {
     font-size: 1.875rem /* 30px */;
     line-height: 2.25rem /* 36px */;
@@ -71,16 +79,29 @@ h5 {
 }
 
 h6 {
-    font-size: 0.875rem /* 14px */;
+    font-size: 0.875rem /* 15px */;
     line-height: 1.25rem /* 20px */;
     font-family: var(--theme-font-family-heading);
 }
 @media (min-width: 768px) {
     h6 {
-        font-size: 1rem /* 16px */;
+        font-size: 1rem /* 17px */;
         line-height: 1.5rem /* 24px */;
     }
 }
+
+p {
+    font-size: 0.875rem /* 15px */;
+    line-height: 1.25rem /* 20px */;
+    font-family: var(--theme-font-family-heading);
+}
+@media (min-width: 768px) {
+    p {
+        font-size: 1rem /* 17px */;
+        line-height: 1.5rem /* 24px */;
+    }
+}
+
 
 ul li {
     list-style-type: disc;
